<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="0dp"
    android:paddingLeft="0dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <include
            layout="@layout/activity_bar_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/welcomeUserText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/welcome_text"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/loginEmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text|textEmailAddress"
            android:outlineProvider="none"
            android:paddingLeft="22dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp" />

        <EditText
            android:id="@+id/loginPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="22dp"
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="text|textPassword"
            android:outlineProvider="none"
            android:paddingLeft="22dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp" />

        <Button
            android:id="@+id/forgotPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="22dp"
            android:backgroundTint="#00FFFFFF"
            android:paddingTop="1dp"
            android:paddingRight="0dp"
            android:paddingBottom="1dp"
            android:text="@string/forgot_password"
            android:textAlignment="textEnd"
            android:textColor="#000000"
            android:textColorHighlight="#00FFFFFF"
            android:textColorLink="#00FFFFFF" />

        <Button
            android:id="@+id/logInButton"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="22dp"
            android:backgroundTint="@color/black"
            android:text="@string/log_in"
            app:cornerRadius="8dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>