<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ForgotPassword">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <include
            layout="@layout/activity_bar_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/welcomeUserText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/forgot_password"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="22dp"
            android:text="@string/forgot_description"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/forgotEmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="55dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text|textEmailAddress"
            android:outlineProvider="none"
            android:paddingLeft="22dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp" />


        <Button
            android:id="@+id/sendCodeButton"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="22dp"
            android:backgroundTint="@color/black"
            android:text="@string/send_code"
            app:cornerRadius="8dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>