<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.UserFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/myProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/my_profile"
            android:textSize="34sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="270dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            android:backgroundTint="@color/background_item_color"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="18dp"
                    android:layout_marginTop="12dp"
                    android:backgroundTint="@color/detail_color"
                    android:elevation="10dp"
                    app:cardCornerRadius="32dp">

                    <ImageView
                        android:id="@+id/profilePicture"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_user" />
                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="12dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="@string/fullname" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/myInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            android:text="@string/my_info"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="270dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_item_color"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:backgroundTint="@color/detail_color"
                        android:elevation="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        app:cardCornerRadius="32dp">

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:scaleType="fitXY"
                            app:tint="@color/white"
                            android:src="@drawable/ic_email" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tvemail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/email"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <androidx.cardview.widget.CardView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:backgroundTint="@color/detail_color"
                        android:elevation="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        app:cardCornerRadius="32dp">

                        <ImageView
                            android:id="@+id/icPhone"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:scaleType="fitXY"
                            app:tint="@color/white"
                            android:src="@drawable/ic_call"
                            />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tvphone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/phone"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:backgroundTint="@color/detail_color"
                        android:elevation="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        app:cardCornerRadius="32dp">

                        <ImageView
                            android:id="@+id/icAddress"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:scaleType="fitXY"
                            app:tint="@color/white"
                            android:src="@drawable/ic_address" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tvAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/address"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:backgroundTint="@color/detail_color"
                        android:elevation="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        app:cardCornerRadius="32dp">

                        <ImageView
                            android:id="@+id/ic_Carreers"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:scaleType="fitXY"
                            app:tint="@color/white"
                            android:src="@drawable/ic_carreers" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tvCareers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/carreers"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:backgroundTint="@color/detail_color"
                        android:elevation="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        app:cardCornerRadius="32dp">

                        <ImageView
                            android:id="@+id/roles"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:scaleType="fitXY"
                            app:tint="@color/white"
                            android:src="@drawable/ic_role" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tvRoles"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/roles"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:backgroundTint="@color/detail_color"
                        android:elevation="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        app:cardCornerRadius="32dp">

                        <ImageView
                            android:id="@+id/icCreationDate"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:scaleType="fitXY"
                            app:tint="@color/white"
                            android:src="@drawable/ic_date" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tvCreationDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/date"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/logOutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/selected_indicator_color"
            android:text="@string/logOut"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>